--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-filter": "^0.5.17",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.3.14",
     "nodemon": "^1.18.7",
     "rxjs": "~6.3.3",
