--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.4.0",
+    "jwt-token-encrypt": "^1.0.4",
     "multer": "^1.4.1"
   }
 }
